[package]
name = "umbra-debug"
version = "0.1.0"
edition = "2021"
description = "TUI debug inspector for Umbra WASM trace events"

[[bin]]
name = "umbra-debug"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "fs"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
regex = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
